echoserver/echo.kube.udp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udp-echoserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: udp-echoserver
  template:
    metadata:
      labels:
        app: udp-echoserver
    spec:
      containers:
      - image: samos123/udp-echo-server
        imagePullPolicy: IfNotPresent
        name: udp-echoserver
        ports:
        - containerPort: 3333
---
apiVersion: v1
kind: Service
metadata:
  name: udp-echoserver
spec:
  ports:
    - port: 3333
      targetPort: 3333
      protocol: UDP
  type: ClusterIP
  selector:
    app: udp-echoserver
